force-app/main/default/objects/Mentor__c/Mentor__c.object-meta.xml
<CustomObject>
    <description>this is a new object</description>
    <label>Mentor</label>
    <nameField>
        <displayFormat>M_ID-A{000000}</displayFormat>
        <label>Mentor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mentors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>