force-app/main/default/objects/Mentor__c/fields/M_mail__c.field-meta.xml
<CustomField>
    <fullName>M_mail__c</fullName>
    <label>M_mail</label>
    <type>Email</type>
</CustomField>