force-app/main/default/objects/Mentor__c/fields/Mentor_Name__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor Name</label>
    <referenceTo>student__c</referenceTo>
    <relationshipLabel>Mentors</relationshipLabel>
    <relationshipName>Mentors</relationshipName>
    <type>Lookup</type>
</CustomField>