force-app/main/default/objects/Mentor__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <label>Skill</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>editor</fullName>
            </value>
            <value>
                <fullName>developer</fullName>
            </value>
            <value>
                <fullName>coder</fullName>
            </value>
            <value>
                <fullName>tester</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>